[package]
name = "my-ffmpeg"
version = "0.1.0"
authors = ["Brian Fjeldstad <bfjelds@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
glib = "0.9"
gstreamer = "0.15"
gstreamer-app = "0.15"
gstreamer-rtsp-server = "0.15"